--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
           "Thanks For Your Contribution To CCI Drama Unit\n God Loves A Cheerful Giver!"
           
         );
+        location.href="https://ccidrama.netlify.app/"
       }
     </script>
   </body>
