--- a/index.html
+++ b/index.html
@@ -140,10 +140,9 @@
                     </select>
                   </div>
 
-                  <a href="/success.html"
-                      > <div class="field padding-bottom--24">
+              <div class="field padding-bottom--24">
                    <input  type="submit" value="Submit"
-                    /></a>
+                    />
                   </div>
                 </form>
               </div>
