--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="formbg">
               <div class="formbg-inner padding-horizontal--48">
                 <span class="padding-bottom--15">Fill the form below</span>
-                <form
+                <form onsubmit="displayThanks(); "
                   class="gform pure-form pure-form-stacked"
                   method="POST"
                   data-email="onyenaucheyaemma@gmail.com"
@@ -277,7 +277,7 @@
           "Thanks For Your Contribution To CCI Drama Unit\n God Loves A Cheerful Giver!"
           
         );
-        location.href="https://ccidrama.netlify.app/"
+        location.href="https://ccidrama.netlify.app/success"
       }
     </script>
   </body>
