--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
             <div class="formbg">
               <div class="formbg-inner padding-horizontal--48">
                 <span class="padding-bottom--15">Fill the form below</span>
-                <form onsubmit="displayThanks(); "
+                <form
+                  onsubmit="displayThanks(); "
                   class="gform pure-form pure-form-stacked"
                   method="POST"
                   data-email="onyenaucheyaemma@gmail.com"
@@ -140,9 +141,10 @@
                     </select>
                   </div>
 
-              <div class="field padding-bottom--24">
+                  <a href="/success.html"
+                      > <div class="field padding-bottom--24">
                    <input  type="submit" value="Submit"
-                    />
+                    /></a>
                   </div>
                 </form>
               </div>
